--- a/lectures/index.html
+++ b/lectures/index.html
@@ -3533,14 +3533,12 @@
     //     return namesList[day];
     // }
 
-
-    //
-
     //     Календарь
     // Реализуйте квадратный календарик, который будет показывать даты и дни недели за текущий месяц.
     //
     //     Модифицируйте предыдущую задачу так, чтобы сверху над календариком появились стрелки вперед и назад,
     //     с помощью которых можно будет менять просматриваемый месяц.
-
+    //
+    // реализовано в отдельном файле
 
 </script>
