--- a/metrics-operation/index.html
+++ b/metrics-operation/index.html
@@ -232,12 +232,12 @@
     // }
     //     Дана кнопка. По нажатию на эту кнопку узнайте, есть ли у окна браузера вертикальная прокрутка. Показать решение.
 
-    function func() {
-        if (window.pageYOffset) {
-            alert('yes: ' + window.pageYOffset+ ' px');
-        } else {
-            alert('no');
-        }
-    }
+    // function func() {
+    //     if (window.pageYOffset) {
+    //         alert('yes: ' + window.pageYOffset+ ' px');
+    //     } else {
+    //         alert('no');
+    //     }
+    // }
 
 </script>
