--- a/date-func/index.html
+++ b/date-func/index.html
@@ -6,8 +6,11 @@
     <script src="script.js"></script>
 </head>
 <body>
-<div class="inputContainer">
-    <input type="text" style="width: 200px" placeholder="YYYY-MM-DD" onblur="func(this)">
+<div class="sample">
+    <div>
+        <p class="timer">0</p>
+    <input type="submit" value="Нажми на меня!" onclick="func()">
+    </div>
 </div>
 </body>
 </html>
