--- a/events-func/index.html
+++ b/events-func/index.html
@@ -5,8 +5,19 @@
     <title>Title</title>
     <script src="script.js"></script>
 </head>
-<body onload="startCountDownTimer()"><!--#3 onload="startClock()" _____#5 onload="startSlider()"-->
+<body>
 <div class="sample">
+    <div>
+        <img src="img/1.png">
+        <img src="img/2.png">
+        <img src="img/3.png">
+        <img src="img/4.png">
+        <input type="submit" value="1">
+        <input type="submit" value="2">
+        <input type="submit" value="3">
+        <input type="submit" value="4">
+        <input type="submit" value="5">
+    </div>
 
 </div>
 </body>
