--- a/form-select-operation/index.html
+++ b/form-select-operation/index.html
@@ -5,26 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-<select id="states">
-    <option value="one">Страна#1</option>
-    <option value="two">Страна#2</option>
-    <option value="three">Страна#3</option>
-</select><br><br>
-<select id="first" style="display: none">
-    <option value="one">Город#1 Страны#1</option>
-    <option value="two">Город#2 Страны#1</option>
-    <option value="three">Город#3 Страны#1</option>
+<select id="day">
 </select>
-<select id="second" style="display: none">
-    <option value="one">Город#1 Страны#2</option>
-    <option value="two">Город#2 Страны#2</option>
-    <option value="three">Город#3 Страны#2</option>
+<select id="month">
 </select>
-<select id="third" style="display: none">
-    <option value="one">Город#1 Страны#3</option>
-    <option value="two">Город#2 Страны#3</option>
-    <option value="three">Город#3 Страны#3</option>
+<select id="year">
 </select>
+
 <!--<input type="text" id="input">-->
 <br><br>
 <!--<input type="submit" value="Go!" id="submit">-->
@@ -112,21 +99,40 @@
     //     Дан селект со списком стран. Сделайте так, чтобы при выборе страны рядом появлялся еще и селект со списком городов из этой страны.
     //     Задача у многих не получается, см. ее разбор https://youtu.be/hgT0mjZvV9s
     //
-    var mainSelect = document.getElementById('states');
-    var options = mainSelect.options;
-
-    mainSelect.addEventListener("change", go);
-
-    function go() {
-
-        for
-
-        if ()
-
-
-
-    }
+    // var mainSelect = document.getElementById('states');
+    // var options = mainSelect.options;
+    //
+    // mainSelect.addEventListener("change", go);
+    //
+    // function go() {
+    //
+    //     for
+    //
+    //         if ()
+    //
+    //
+    //
+    //             }
 
     //     Даны 3 селекта: с днем, с месяцем и годом. Сделайте так, чтобы некорректную дату нельзя было выбрать.
     //     Задача у многих не получается, см. ее разбор https://youtu.be/rqq__uXca6Q
+    var year = document.getElementById('year');
+    var month = document.getElementById('month');
+    var year = document.getElementById('day');
+
+
+    year.addEventListener('click', function(){
+        for (var i = 2000; i <= 2018; i++ ){
+
+            year.add(i);
+
+
+        }
+       console.log(year.select());
+    });
+
+
+
+
+
 </script>
