set collection pract done

--- a/set-collection-pract/index.html
+++ b/set-collection-pract/index.html
@@ -5,6 +5,17 @@
     <title>Title</title>
 </head>
 <body>
+<input id="input">
+<p id="par"></p>
+<button id="button">Go!</button>
+
+<p class="last">1</p>
+<p class="last">1</p>
+<p class="last">1</p>
+<p class="last">1</p>
+<p class="last">1</p>
+<p class="last">1</p>
+<button id="addButton">Go!</button>
 
 </body>
 </html>
@@ -16,43 +27,127 @@
     //     Задача :
     // Создайте пустую коллекцию Set. С помощью метода add добавьте в нее элементы со значениями 1, 2 и 3.
     //
+    // let set = new Set();
+    //
+    // set.add(1);
+    // set.add(2);
+    // set.add(3);
+    // console.log(set);
+
     // Задача :
     // Создайте коллекцию Set с начальными значениями 1,2,3. С помощью свойства size выведите на экран количество элементов в коллекции.
     //
+    // let set = new Set([1, 2, 3]);
+    // console.log(set.size);
+
     //Задача :
-    // Создайте коллекцию Set с начальными значениями 1,2,3. С помощью метода has проверьте наличие элемента со значением 3, а затем элемента со значением 4.
+    // Создайте коллекцию Set с начальными значениями 1,2,3.
+    // С помощью метода has проверьте наличие элемента со значением 3, а затем элемента со значением 4.
     //
+    // let set = new Set([1, 2, 3]);
+    // console.log(set.has(3));
+    // console.log(set.has(4));
+
     // Задача :
-    // Создайте коллекцию Set с начальными значениями 1,2,3. С помощью метода add добавьте в коллекцию еще одно число 2. Выведите содержимое коллекции в консоль, убедитесь, что число 2 не добавилось второй раз.
+    // Создайте коллекцию Set с начальными значениями 1,2,3.
+    // С помощью метода add добавьте в коллекцию еще одно число 2.
+    // Выведите содержимое коллекции в консоль, убедитесь, что число 2 не добавилось второй раз.
     //
+    // let set = new Set([1, 2, 3]);
+    // set.add(2);
+    // console.log(set);
+
     // Задача :
     // Дан массив с числами. С помощью цикла и метода add добавьте все элементы этого массива в коллекцию Set.
     //
-    // Задача :
-    // Модифицируйте предыдущую задачу так, чтобы в коллекцию добавлялись только четные числа из массива, а нечетные - игнорировались.
+    // let set = new Set();
+    // let arr = [1, 2, 3, 4];
     //
+    // for (let value of arr) {
+    //     set.add(value);
+    // }
+
+    // Задача :
+    // Модифицируйте предыдущую задачу так, чтобы в коллекцию добавлялись только четные числа из массива,
+    // а нечетные - игнорировались.
+    //
+    // let set = new Set();
+    // let arr = [1, 2, 3, 4];
+    //
+    // arr.filter(value => value % 2 ==0).forEach(value => set.add(value));
+
     // Задача :
     // Дана коллекция Set со значениями 1,2,3. С помощью цикла for-of переберите ее значения и выведите в консоль.
     //
+    // let set = new Set([1, 2, 3, 4]);
+    //
+    // for (let value of set) {
+    //     console.log(value);
+    // }
+
     // Задача :
     // Дана коллекция Set с некоторыми числовыми значениями. Найдите сумму этих значений.
     //
+    // let set = new Set([1, 2, 3, 4]);
+    //
+    //
+    //     let sum = 0;
+    //
+    //     for (let value of set) {
+    //         sum+= value;
+    //     }
+
 
     //     Практика
 
     // Задача :
-    //     Дан инпут и кнопка. Пользователь вводит в инпут число и жмет на кнопку и делает так произвольное количество раз. Сделайте так, чтобы каждый раз под инпутом в абзац через запятую выводился список всех введенных пользователем чисел, но без дублей.
+    //     Дан инпут и кнопка.
+    //     Пользователь вводит в инпут число и жмет на кнопку и делает так произвольное количество раз.
+    //     Сделайте так, чтобы каждый раз под инпутом в абзац через запятую выводился список всех введенных
+    //     пользователем чисел, но без дублей.
     //
+    // let input = document.getElementById('input');
+    // let button = document.getElementById('button');
+    // let p = document.getElementById('par');
+    // let set = new Set();
+    //
+    // button.addEventListener("click", () => {
+    //     set.add(input.value);
+    //     p.innerHTML = Array.from(set).join(', ');
+    //     input.value = '';
+    //
+    // });
+
 
     //     Применение
-    // Теория в следующем видео: удаление дублей: https://youtu.be/h6iqCJSpT3w,
-    //
+
     //     Задача :
     //         Пусть дан массив. С помощью Set получите этот же массив, но без дублей.
-    //
+    // new Set([1, 1, 2, 3, 4, 1, 3, 2]);
+
     //     DOM элементы
-    // Теория в следующем видео: получение дом элементов без дублей: https://youtu.be/UzGWCYWn_IQ.
-    //
+
     //     Задача :
-    //         Даны абзацы и кнопка. Пользователь кликает на эти абзацы в произвольном порядке. Сделайте так, чтобы по нажатию на кнопку в конец каждого абзаца, на который был совершен клик, был добавлен восклицательный знак.
+    //         Даны абзацы и кнопка. Пользователь кликает на эти абзацы в произвольном порядке.
+    //         Сделайте так, чтобы по нажатию на кнопку в конец каждого абзаца, на который был совершен клик,
+    //         был добавлен восклицательный знак.
+    //
+    // let p = document.querySelectorAll('.last');
+    // let go = document.getElementById('addButton');
+    // let set = new Set();
+    //
+    // for (let value of p) {
+    //     value.addEventListener("click", function () {
+    //         set.add(this);
+    //
+    //     });
+    // }
+    // go.addEventListener("click", function () {
+    // for (let value of set){
+    //     value.innerHTML = value.innerHTML + '!';
+    // }
+    // set.clear();
+    // });
+
+
 </script>
