--- a/regular-expressions-pract/index.html
+++ b/regular-expressions-pract/index.html
@@ -13,56 +13,205 @@
     // На '.', символы
     // Дана строка 'ahb acb aeb aeeb adcb axeb'.
     // Напишите регулярку, которая найдет строки ahb, acb, aeb по шаблону: буква 'a', любой символ, буква 'b'.
-    //
+    // /a.b/g
+
     //
     //     Дана строка 'aba aca aea abba adca abea'.
     //     Напишите регулярку, которая найдет строки abba adca abea по шаблону: буква 'a', 2 любых символа,
     //     буква 'a'.
-    //
+    // /a..a/g
+
     //     Дана строка 'aba aca aea abba adca abea'.
     //     Напишите регулярку, которая найдет строки abba и abea, не захватив adca.
-    //
+    // /ab.a/g
 
     //     На '+', '*', '?', ()
 
     // Дана строка 'aa aba abba abbba abca abea'.
     // Напишите регулярку, которая найдет строки aba, abba, abbba по шаблону: буква 'a', буква 'b' любое количество раз,
     // буква 'a'.
+    // /ab+a/g
+
     //
     //     Дана строка 'aa aba abba abbba abca abea'.
     //     Напишите регулярку, которая найдет строки aa, aba, abba, abbba по шаблону: буква 'a', буква 'b'
     //     любое количество раз (в том числе ниодного раза), буква 'a'.
+    // /ab*a/g
+
     //
     //     Дана строка 'aa aba abba abbba abca abea'.
     //     Напишите регулярку, которая найдет строки aa, aba по шаблону: буква 'a', буква 'b' один раз или ниодного,
     //     буква 'a'.
-    //
+    // /ab?a/g
+
     //     Дана строка 'aa aba abba abbba abca abea'.
     //     Напишите регулярку, которая найдет строки aa, aba, abba, abbba, не захватив abca abea.
-    //
+    // /a+b+a/g
+
     //     Дана строка 'ab abab abab abababab abea'.
     //     Напишите регулярку, которая найдет строки по шаблону: строка 'ab' повторяется 1 или более раз.
-    //
+    // /(ab)+/g
 
     //     На экранировку
 
     // Дана строка 'a.a aba aea'. Напишите регулярку, которая найдет строку a.a, не захватив остальные.
-    //
+    // /a\.a/g
+
     //     Дана строка '2+3 223 2223'. Напишите регулярку, которая найдет строку 2+3, не захватив остальные.
-    //
+    // /2\+3/g
+
     //     Дана строка '23 2+3 2++3 2+++3 345 567'.
     //     Напишите регулярку, которая найдет строки 2+3, 2++3, 2+++3,
     //     не захватив остальные (+ может быть любое количество).
-    //
+    //  /2\++3/g
+
     //     Дана строка '23 2+3 2++3 2+++3 445 677'.
     //     Напишите регулярку, которая найдет строки 23, 2+3, 2++3, 2+++3, не захватив остальные.
-    //
+    // /2.+3/g
+
     //     Дана строка '*+ *q+ *qq+ *qqq+ *qqq qqq+'.
     //     Напишите регулярку, которая найдет строки *q+, *qq+, *qqq+, не захватив остальные.
-    //
+    ///\*.*\+/g
+
     //     На жадность
 
     // Дана строка 'aba accca azzza wwwwa'.
     // Напишите регулярку, которая найдет все строки по краям которых стоят буквы 'a',
     // и заменит каждую из них на '!'. Между буквами a может быть любой символ (кроме a).
+    // console.log('aba accca azzza wwwwa'.replace(/a.+?a/g, '!'));
+
+    //    Задачи на регулярные выражения JavaScript. Часть 2
+
+    //    Задачи для решения
+    //    На {}
+
+    //    Дана строка 'aa aba abba abbba abbbba abbbbba'.
+    //    Напишите регулярку, которая найдет строки abba, abbba, abbbba и только их. Показать решение.
+    // /ab{2,4}a/g
+
+    //        Дана строка 'aa aba abba abbba abbbba abbbbba'.
+    //        Напишите регулярку, которая найдет строки вида aba, в которых 'b' встречается менее 3-х раз
+    //        (включительно). Показать решение.
+    // /ab{0,3}a/g
+
+    //        Дана строка 'aa aba abba abbba abbbba abbbbba'.
+    //        Напишите регулярку, которая найдет строки вида aba, в которых 'b'
+    //        встречается более 4-х раз (включительно). Показать решение.
+    // /ab{4,}a/g
+
+    //        На \s, \S, \w, \W, \d, \D
+
+    //    Дана строка 'a1a a2a a3a a4a a5a aba aca'. Напишите регулярку, которая найдет строки, в которых по
+    //    краям стоят буквы 'a', а между ними одна цифра. Показать решение.
+    // /a\da/g
+
+    //        Дана строка 'a1a a22a a333a a4444a a55555a aba aca'. Напишите регулярку, которая найдет строки,
+    //        в которых по краям стоят буквы 'a', а между ними любое количество цифр. Показать решение.
+    // /a\d+a/g
+
+    //        Дана строка 'aa a1a a22a a333a a4444a a55555a aba aca'. Напишите регулярку, которая найдет строки,
+    //        в которых по краям стоят буквы 'a', а между ними любое количество цифр (в том числе и ноль цифр,
+    //        то есть строка 'aa'). Показать решение.
+    // /a\d*a/g
+
+    //        Дана строка 'avb a1b a2b a3b a4b a5b abb acb'. Напишите регулярку, которая найдет строки следующего вида:
+    //        по краям стоят буквы 'a' и 'b', а между ними - не число. Показать решение.
+    // /a\Db/g
+
+    //        Дана строка 'ave a#b a2b a$b a4b a5b a-b acb'. Напишите регулярку, которая найдет строки следующего вида:
+    //        по краям стоят буквы 'a' и 'b', а между ними - не буква и не цифра. Показать решение.
+    // /a\Wb/g
+
+    //        Дана строка 'ave a#a a2a a$a a4a a5a a-a aca'. Напишите регулярку, которая заменит все пробелы на '!'.
+    //        Показать решение.
+    //
+    // console.log('ave a#a a2a a$a a4a a5a a-a aca'.replace(/\s/g, '!'));
+
+    //        На [], '^' - не, [a-zA-Z], кириллицу
+
+    //    Дана строка 'aba aea aca aza axa'. Напишите регулярку, которая найдет строки aba, aea, axa, не затронув
+    //    остальных. Показать решение.
+    // /a[bex]a/g
+
+    //        Дана строка 'aba aea aca aza axa a.a a+a a*a'. Напишите регулярку, которая найдет строки aba, a.a, a+a,
+    //        a*a, не затронув остальных. Показать решение.
+    // /a[+.*]a/g
+
+    //        Напишите регулярку, которая найдет строки следующего вида: по краям стоят буквы 'a',
+    //        а между ними - цифра от 3-х до 7-ми. Показать решение.
+    // /a[3-7]a/g
+
+    //        Напишите регулярку, которая найдет строки следующего вида: по краям стоят буквы 'a',
+    //        а между ними - буква от a до g. Показать решение.
+    // /a[a-g]a/g
+
+    //        Напишите регулярку, которая найдет строки следующего вида: по краям стоят буквы 'a',
+    //        а между ними - буква от a до f и от j до z. Показать решение.
+    // /a[a-fj-z]a/g
+
+    //        Напишите регулярку, которая найдет строки следующего вида: по краям стоят буквы 'a',
+    //        а между ними - буква от a до f и от A до Z. Показать решение.
+    // /a[a-fA-Z]a/g
+
+    //        Дана строка 'aba aea aca aza axa a-a a#a'. Напишите регулярку, которая найдет строки следующего вида:
+    //        по краям стоят буквы 'a', а между ними - не 'e' и не 'x'. Показать решение.
+    // /a[^ex]a/g
+
+    //        Дана строка 'wйw wяw wёw wqw'. Напишите регулярку, которая найдет строки следующего вида:
+    //        по краям стоят буквы 'w', а между ними - буква кириллицы. Показать решение.
+    // /w[А-Яа-яЁё]w/g
+
+    //        На [a-zA-Z] и квантификаторы
+
+    //    Дана строка 'aAXa aeffa aGha aza ax23a a3sSa'. Напишите регулярку, которая найдет строки следующего вида:
+    //    по краям стоят буквы 'a', а между ними - маленькие латинские буквы, не затронув остальных. Показать решение.
+    // /a[a-z]+a/g
+
+    //        Дана строка 'aAXa aeffa aGha aza ax23a a3sSa'. Напишите регулярку, которая найдет строки следующего вида:
+    //        по краям стоят буквы 'a', а между ними - маленькие и большие латинские буквы, не затронув остальных. Показать решение.
+    // /a[A-Za-z]+a/g
+
+    //        Дана строка 'aAXa aeffa aGha aza ax23a a3sSa'. Напишите регулярку, которая найдет строки следующего вида:
+    //        по краям стоят буквы 'a', а между ними - маленькие латинские буквы и цифры, не затронув остальных. Показать решение.
+    // /a[a-z]\d+a/g
+
+    //        Дана строка 'ааа ббб ёёё ззз ййй ААА БББ ЁЁЁ ЗЗЗ ЙЙЙ'. Напишите регулярку, которая найдет все слова по
+    //        шаблону: любая кириллическая буква любое количество раз. Показать решение.
+    //  /[А-Яа-яЁё]+/g
+
+    //        На '^', '$'
+
+    //    Дана строка 'aaa aaa aaa'. Напишите регулярку, которая заменит первое 'aaa' на '!'. Показать решение.
+    //
+    // console.log('aaa aaa aaa'.replace(/^aaa/, '!'));
+
+    //        Дана строка 'aaa aaa aaa'. Напишите регулярку, которая заменит последнее 'aaa' на '!'. Показать решение.
+    //
+    // console.log('aaa aaa aaa'.replace(/aaa$/g, "!"));
+
+    //        На '|'
+    //    Дана строка 'aeeea aeea aea axa axxa axxxa'. Напишите регулярку, которая найдет строки следующего вида:
+    //    по краям стоят буквы 'a', а между ними - или буква 'e' любое количество раз или по краям стоят буквы 'a',
+    //    а между ними - буква 'x' любое количество раз. Показать решение.
+    // /a(e+|x+)a/
+
+    //        Дана строка 'aeeea aeea aea axa axxa axxxa'. Напишите регулярку, которая найдет строки следующего вида:
+    //        по краям стоят буквы 'a', а между ними - или буква 'e' два раза или буква 'x' любое количество раз. Показать решение.
+    // /a(ee|x+)a/g
+
+    //        На обратный слеш \
+
+    // Дана строка 'a\a abc'. Напишите регулярку, которая заменит строку 'a\a' на '!'. Показать решение.
+    //
+    // console.log('a\a abc'.replace(/a\\+a/g, '!'));
+
+    //        Дана строка 'a\a a\\a a\\\a'. Напишите регулярку, которая заменит строку 'a\\\a' на '!'. Показать решение.
+    //
+    // console.log('a\a a\\a a\\\a'.replace(/a\\{3}a/g, "!"));
+
+    //        На экранировку посложнее
+    //    Дана строка 'bbb /aaa\ bbb /ccc\'. Напишите регулярку, которая найдет содержимое всех конструкций /...\ и
+    //    заменит их на '!'. Показать решение.
+    // console.log("bbb /aaa\ bbb /ccc\".replace(//.+\\/g, "!"));
+
 </script>
