--- a/regular-expressions-pract/index.html
+++ b/regular-expressions-pract/index.html
@@ -214,4 +214,58 @@
     //    заменит их на '!'. Показать решение.
     // console.log("bbb /aaa\ bbb /ccc\".replace(//.+\\/g, "!"));
 
+    // Задачи на регулярные выражения JavaScript. Часть 3
+
+    // Задачи для решения
+    // На карманы при замене
+
+    // Дана строка 'aaa@bbb eee7@kkk'. Напишите регулярку, которая найдет строки по шаблону:
+    // любое количество букв и цифр, символ @, любое количество букв и цифр и поменяет местами то,
+    // что стоит до @ на то, что стоит после нее. Например, aaa@bbb должно превратиться в bbb@aaa. Показать решение.
+    //
+    //     Дана строка вида 'a1b2c3'. Напишите регулярку, которая найдет все цифры и удвоит их количество таким образом:
+    //     'a11b22c33' (то есть рядом с каждой цифрой напишет такую же). Показать решение.
+    //
+    //     Задачи на test и match
+
+    // Задачи ниже не всегда можно решить с помощью одной только регулярки.
+    // Может понадобится еще что-нибудь дописать на JavaScript (не всегда, но такое может быть).
+    //
+    // С помощью метода test определите, что переданная строка является емэйлом.
+    // Примеры емэйлов для тестирования mymail@mail.ru, my.mail@mail.ru, my-mail@mail.ru, my_mail@mail.ru,
+    // mail@mail.com, mail@mail.by, mail@yandex.ru. Показать решение.
+    //
+    //     Дана строка с текстом, в котором могут быть емейлы.
+    //     С помощью match найдите все емэйлы в виде массива. Показать решение.
+    //
+    //     С помощью test определите, что переданная строка является доменом.
+    //     Примеры доменов: site.ru, site.com, my-site.com. Показать решение.
+    //
+    //     С помощью test определите, что переданная строка является доменом.
+    //     Примеры доменов: http://site.ru, http://site.com. Показать решение.
+    //
+    //     С помощью test определите, что переданная строка является доменом вида http://site.ru.
+    //     Протокол может быть как http, так и https. Показать решение.
+    //
+    //     С помощью test определите, что переданная строка начинается с http или с https. Показать решение.
+    //
+    //     С помощью test определите, что переданная строка заканчивается расширением txt, html или php.
+    //     Показать решение.
+    //
+    //     С помощью test определите, что переданная строка заканчивается расширением jpg или jpeg. Показать решение.
+    //
+    //     С помощью test узнайте является ли строка числом, длиной до 12 цифр. Показать решение.
+    //
+    //     Дана строка с буквами, пробелами и цифрами. Найдите сумму всех чисел из данной строки. Показать решение.
+    //
+    //     Задачи на replace
+    // С помощью replace замените в строке домены вида http://site.ru, http://site.com на
+    // <a href="http://site.ru">site.ru</a>. Показать решение.
+    //
+    //     С помощью replace замените все повторяющиеся пробелы на один. Показать решение.
+    //
+    //     Найдите и удалите все комментарии CSS. Показать решение.
+    //
+    //     Найдите и удалите все комментарии HTML. Показать решение.
+
 </script>
