--- a/regular-expressions-pract/index.html
+++ b/regular-expressions-pract/index.html
@@ -268,4 +268,53 @@
     //
     //     Найдите и удалите все комментарии HTML. Показать решение.
 
+    // Задачи на регулярные выражения JavaScript. Часть 4
+    //
+    //     Задачи для решения
+    // На позитивный и негативный просмотр
+    //
+    // С помощью позитивного и негативного просмотра найдите все строки по шаблону 3 буквы a,
+    // затем буква b и поменяйте 3 буквы a на знак '!'. То есть из 'aaab' нужно сделать '!b'. Показать решение.
+    //
+    //     С помощью позитивного и негативного просмотра найдите все строки по шаблону 3 буквы a,
+    //     затем любая буква, но не b и поменяйте 3 буквы a на знак '!'. То есть из, к примеру, 'aaaw' нужно
+    //     сделать '!w', а 'aaab' не поменяется. Показать решение.
+    //
+
+    //     На replace
+
+    // Дана строка с целыми числами. С помощью регулярки преобразуйте строку так,
+    // чтобы вместо этих чисел стояли их квадраты. Показать решение.
+    //
+    //     Дана строка с целыми числами. Найдите числа, стоящие в кавычках и увеличьте их в два раза.
+    //     Пример: из строки 2aaa'3'bbb'4' сделаем строку 2aaa'6'bbb'8'. Показать решение.
+    //
+    //     Дана строка в которой есть вставки {{текст}}. Найдите все такие вставки и поменяйте в них порядок
+    //     букв на обратный (то есть из 'текст' нужно сделать 'тскет'). Показать решение.
+    //
+    //     Дана строка '23 + 35 ='. Числа могут быть любыми. Выведите на экран результат операции в виде
+    //     '23 + 35 = 58'. Показать решение.
+    //
+
+    //     Головоломки
+
+    // Определите, что год находится в интервале от 1900 до 2100 с помощью одного только регулярного выражения.
+    // Показать решение.
+    //
+    //     С помощью test определите, что переданная строка является корректным временем вида
+    //     '12:59', '23:41', '00:12', '00:00', '09:15'. Время '24.00', '25.00', '12.60', '12.93', '41.93'
+    //     является некорректным. Показать решение.
+    //
+    //     С помощью test определите, что переданная строка является корректным временем вида
+    //     '9.59 am', '12.30 pm'. Показать решение.
+    //
+    //     Удалите одной регуляркой все слова из предложения, содержащие две одинаковые следующие
+    //     друг за другом буквы. Показать решение.
+    //
+    //     Удалите одной регуляркой все повторяющиеся слова из строки, например для 'dsf xxx xxx sd'
+    //     должно вернуть 'dsf xxx sd'. Показать решение.
+    //
+    //     Решите предыдущую задачу с учетом того, что слово может повторяться много раз.
+    //     Например 'dsf xxx xxx xxx xxx xxx sd' должно вернуть 'dsf xxx sd'. Показать решение.
+
 </script>
