--- a/regular-expressions-pract/index.html
+++ b/regular-expressions-pract/index.html
@@ -223,17 +223,25 @@
     // любое количество букв и цифр, символ @, любое количество букв и цифр и поменяет местами то,
     // что стоит до @ на то, что стоит после нее. Например, aaa@bbb должно превратиться в bbb@aaa. Показать решение.
     //
-    //     Дана строка вида 'a1b2c3'. Напишите регулярку, которая найдет все цифры и удвоит их количество таким образом:
-    //     'a11b22c33' (то есть рядом с каждой цифрой напишет такую же). Показать решение.
+    // console.log('aaa@bbb eee7@kkk'.replace(/([a-z0-9]+)@([a-z0-9]+)/g, '$2@$1'));
+
+    //     Дана строка вида 'a1b2c3'. Напишите регулярку, которая найдет все цифры и удвоит их количество
+    //     таким образом: 'a11b22c33' (то есть рядом с каждой цифрой напишет такую же). Показать решение.
     //
+    //console.log('a1b2c3'.replace(/(\d)/g, '$1$1'))
+
     //     Задачи на test и match
 
     // Задачи ниже не всегда можно решить с помощью одной только регулярки.
     // Может понадобится еще что-нибудь дописать на JavaScript (не всегда, но такое может быть).
-    //
+
     // С помощью метода test определите, что переданная строка является емэйлом.
     // Примеры емэйлов для тестирования mymail@mail.ru, my.mail@mail.ru, my-mail@mail.ru, my_mail@mail.ru,
     // mail@mail.com, mail@mail.by, mail@yandex.ru. Показать решение.
+    //
+    let patt = /^[a-zA-Z0-9.]@[a-z]/g
+    console.log(/^[a-zA-Z0-9.]+@.+/g.test('my_mail@mail.ru'));
+
     //
     //     Дана строка с текстом, в котором могут быть емейлы.
     //     С помощью match найдите все емэйлы в виде массива. Показать решение.
